fix for spacing of wardrobe

--- a/src/CSS/wardrobe.css
+++ b/src/CSS/wardrobe.css
@@ -5,7 +5,7 @@
     padding-top:2em;
     height:50vh;
     display:grid;
-    grid-template-columns: 80% 20%;
+    grid-template-columns: 0% 80% 20%;
 }
 
 #canvas {
@@ -30,12 +30,14 @@
     float:left;
 }
 
+/* Wide displays */
 @media (min-width:901px) {
     #wardrobe-section {
-        grid-template-columns: 3fr 1fr .5fr;
+        grid-template-columns: 1fr 3fr .5fr 1fr;
     }
 }
 
+/* Moderately narrow displays */
 @media (max-width:600px) {
     #wardrobe-menu i {
         font-size:2em;
